assets/css/style.css
html, body {
  /* reset default margins and paddings in browsers */
  margin: 0;
  padding: 0;
}

body {
  background-color: #212E3C;
  font-family: "Myriad Pro", Helvetica, Arial, Sans-serif;
  font-size: 14px;
}

a {
  color: #227ECC;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

a:visited {
  color: #227ECC;
}

a img {
  border: none;
}

h1 {
  color: #FF7700;
  padding: 2px 0 15px 0;
  margin: 0;
}

h2 {
  color: #FF7700;
  padding: 2px 0 15px 0;
  margin: 0;
}

h3 {
  color: #FF8C00;
  margin: 0;
  padding: 7px 0;
}

p {
  margin: 0;
  padding: 0;
}

#address_cpright {
  background-color: #212E3C;
  color: #736E6F;
  min-height: 4em;
}

#body {
  background-color: white;
}

#body_wrapper {
  background-color: white;
  margin: auto;
  padding: 15px 0;
  width: 980px;
}

#bottom_menu {
  font-size: 95%;
  margin: auto;
  width: 980px;
}

#bottom_menu a {
  color: #ACA9A9;
}

#bottom_menu a:hover,
#top_menu a:hover {
  color: white;
  text-decoration: underline;
}

#bottom_menu ul {
  padding: 0;
  margin: 0;
}

#bottom_menu li {
  padding: 0 10px;
}

#bottom_menu li.right_separator {
  border-right: 1px solid #ACA9A9;
}

#bottom_menu_container {
  background-color: #364452;
  color: #ACA9A9;
  padding: 5px 0;
}

#copyright {
  font-size: 80%;
  margin: auto;
  width: 580px;
}

#copyright_container {
  margin: auto;
  width: 960px;
}

#content {
  padding: 20px 25px;
}

#content_wrapper {
  background-color: #FBFBEF;
  border-right: 1px solid lightgray;
  min-height: 350px;
  width: 710px;
}

#content_container {
  margin: auto;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  -moz-box-shadow: 0 5px 10px lightgrey;
  -webkit-box-shadow:0 5px 10px lightgrey;
  box-shadow: 0 5px 10px lightgrey;
  background-color: #F1F1C6;
  border: 1px solid #CCC;
  width: 960px;
}

#event_list .month_title {
  padding: 10px 0;
}

#footer {
  margin: auto;
  min-width: 980px;
}

#header {
  background-color: #9c9f77;
  color: white;
  height: 130px;
  min-width: 980px;
}

#inner_header {
  margin: auto;
  width: 980px;
}

#logo {
  margin: auto;
  width: 980px;
  z-index: 0;
}

#logo a {
  position: absolute;
}

#logo img {
  float: left;
}

#main_menu {
  font-family: 'Yanone Kaffeesatz', 'Myriad Pro', Arial;
  font-size: 25px;
  padding: 90px 0 0;
}

#main_menu a {
  color: white;
  padding-bottom: 12px;
  text-shadow: 0 0 2px #BBB;
}

#main_menu a:hover,
#main_menu a.selected {
  background: url("images/icons/selection_arrow.png") no-repeat center bottom;
  color: #FF3;
  text-shadow: 0 0 1px #FFB;
}

#main_menu ul {
  margin: 0;
  padding: 0;
  position: relative;
  z-index: 9;
}

#main_menu ul li {
  padding: 0 10px;
}

#main_page {
  /*background: transparent url("images/front_page_bg.png")
   * no-repeat 0 0;
  height: 450px;
  position: absolute;
  margin: 15px auto;
  */
  width: 980px;
}

#mp_container {
  margin: auto;
  margin: 15px auto;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  -moz-box-shadow: 0 5px 10px lightgrey;
  -webkit-box-shadow:0 5px 10px lightgrey;
  box-shadow: 0 5px 10px lightgrey;
  background-color: #FBFBEF;
  border: 1px solid #999;
  min-height: 350px;
  padding: 20px 25px;
  width: 900px;
}

#mp_img {
  position: absolute;
  top: 150px;
  z-index: -1;
}

#mp_slideshow {
  padding-top: 10px;
}

#mp_slideshow img {
  -moz-box-shadow: 0 0 15px #999999;
  -webkit-box-shadow: 0 0 15px #999999;
  box-shadow: 0 0 15px #999999;
  border: 10px solid white;
  max-height: 300px;
  max-width: 400px;
}

#mp_slideshow ul {
    display: inline;
    float: right;
    left: 450px;
    list-style: none;
    margin: 0;
    height: 320px;
    width: 420px;
}

#mp_updates {
  background-color: #F1F1C6; /*#A39480;*/
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  -moz-box-shadow: 0 5px 10px lightgrey;
  border-right: 1px solid #999;
  border-left: 1px solid #999;
  border-bottom: 1px solid #999;
  min-height: 10em;
  padding: 20px 25px;
  margin: -15px auto 0;
  width: 900px;
}

#mp_updates p,
#mp_updates ul {
  font-size: 93%;
}

#mp_updates .col {
  -moz-box-shadow: 1px 1px 5px lightgrey;
  -webkit-box-shadow: 1px 1px 5px lightgrey;
  box-shadow: 1px 1px 5px lightgrey;
  -moz-border-radius: 2em 1em;
  -webkit-border-radius: 2em 1em;
  background-color: white;
  background-color: white;
  float: left;
  min-height: 190px;
  margin: 10px 0 10px 8px;
  padding: 20px;
  width: 250px;
}

#mp_updates .col h3 {
  border-bottom: 1px dashed gray;
  margin: 5px 0 10px;
  padding-bottom: 3px;
}

#mp_wrapper {
  background: url("images/front_page_bg.png") no-repeat white;
  padding-top: 350px;
  margin: auto;
  width: 980px;
}

#short_summary {
    /* Fallback for browsers with RGB only */
    background: rgb(255,255,100);
    background: rgba(255,255,100,0.3);
    /* For IE 5.5 - 7*/
    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#4C000000, endColorstr=#4C000000);
    /* For IE 8*/
    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#4C000000, endColorstr=#4C000000)";
    -moz-border-radius: 7px;
    -webkit-border-radius: 7px;
    border-radius: 7px;
    display: block;
    float: right;
    font-style: italic;
    margin-right: 100px;
    margin-top: 80px;
    min-height: 120px;
    padding: 10px;
    text-shadow: 1px 1px 10px gray;
    width: 350px;
}

#sidebar_wrapper {
  background-color: #F1F1C6;
  float: right;
  width: 248px;
}

#sidebar {
  padding: 20px 15px;
}

#sidebar ul {
  font-size: 110%;
  list-style-type: none;
  padding-left: 25px;
}

#sidebar ul.second_level {
  font-size: 90%;
}

#sidebar li {
  font-size: 100%;
  list-style-image: url("images/icons/arrow_right_small.png");
  padding: 5px 0;
}

#sidebar ul.second_level li {
  list-style: square;
}

#sidebar li a {
  color: gray; 
}

#sidebar li a:hover {
  color: #227ECC;
  font-weight: bold;
}

#sidebar li.selected > a:first-child {
  color: #227ECC;
  font-weight: bold;
}

#top_menu {
  float: right;
  font-size: 90%;
}

#top_menu a {
  color: lightblue;
}

#top_menu li {
  padding: 0 10px;
}

#top_menu li.left_separator {
  border-left: 1px solid lightblue;
}

a.no_line:hover {
  text-decoration: none;
}

a.home_button {
  background: url("images/buttons/home_button.png") no-repeat;
  height: 34px;
  width: 38px;
}

a.home_button:hover {
  background-position: -38px 0;
}

a.about_button {
  background: url("images/buttons/about_button.png") no-repeat;
  height: 34px;
  width: 74px;
}

a.about_button:hover {
  background-position: -74px 0;
}

a.teaching_button {
  background: url("images/buttons/teaching_button.png") no-repeat;
  height: 34px;
  width: 68px;
}

a.teaching_button:hover {
  background-position: -68px 0;
}

a.classes_button {
  background: url("images/buttons/classes_button.png") no-repeat;
  height: 34px;
  width: 59px;
}

a.classes_button:hover {
  background-position: -59px 0;
}

a.events_button {
  background: url("images/buttons/events_button.png") no-repeat;
  height: 34px;
  width: 53px;
}

a.events_button:hover {
  background-position: -53px 0;
}

a.nav {
  font-size:13px;
}

a.media_button {
  background: url("images/buttons/media_button.png") no-repeat;
  height: 34px;
  width: 43px;
}

a.media_button:hover {
  background-position: -43px 0;
}

div.photo-gallery {
  width: auto;
}

form.aligned p label {
    display: block;
    float: left;
    width: 12em;
}

p.caption {
  padding: 5px 0;
  text-align: left;
}

table.thumb_grid {
  width: 100%;
}

table.thumb_grid .title {
  font-size: 90%;
  font-weight: bold;
  padding: 5px 0;
}

table.thumb_grid .thumb {
  border: 1px solid #AAA;
  display: inline-block;
  padding: 5px;
}

ul.errorlist {
    margin: 2px 0;
    padding: 0;
}

ul.errorlist li {
    background: #FF5544;
    color: white;
    padding: 2px 7px;
}

ul.horizontal,
ul.horizontal_left {
  list-style-type: none;
  margin: 5px 0;
  padding: 0;
}

ul.horizontal li {
  float: right;
}

ul.horizontal_left li {
  float: left;
}

.album_header {
  border-bottom: 1px solid lightgray;
  padding: 2px 0 5px 0;
  vertical-align: bottom;
}

.album_header h1 {
  padding: 0;
}

.class_gallery {
  background-color: beige;
  border: 1px solid #DDA;
  margin: 30px 0;
  padding: 10px;
  text-align: center;
}

.class_gallery img {
  -moz-box-shadow: 0 0 5px #CCC;
  -webkit-box-shadow: 0 0 5px #CCC;
  box-shadow: 0 0 5px #CCC;
  background-color: white;
  padding: 10px;
}

.clearfix:after {
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden;
}

.event_listing {
  border-bottom: 1px solid lightgray;
  margin: 10px 0;
  min-height: 3em;
}

.event_listing .event_date {
  float: left;
  font-size: 250%;
  padding: 2px 15px;
}

.event_listing .event_description {
  padding: 5px 0;
}

.gallery-photo {
  float: left;
  padding: 1px 3px;
}

.gallery-end {
  clear: both;
}

.latest_list ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.latest_list li {
  padding: 5px 0;
}

.latest_list li.add_separator {
  border-top: 1px solid #EEE;
}

.latest_list .date {
  font-weight: bold;
}

.NA {
  color: gray;
  font-style: italic;
}

.photo_detail {
  text-align: center;
}

.photo_display {
  background-color: #EEE;
}

.photo_navigation {
  text-align: center;
}

.photo_navigation a {
  padding: 0 2px;
}

.side_menu_header {
  border-bottom: 2px dotted #FC6;
  letter-spacing: 8px;
  padding-bottom: 5px;
}

.uppercase {
    text-transform: uppercase;
}

.left {
  float: left;
}

.right {
  float: right;
}

